--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -1,15 +1,2 @@
-﻿annotated-types==0.7.0
-anyio==4.10.0
-asyncpg==0.30.0
-fastapi==0.116.1
-idna==3.10
-psycopg2==2.9.10
-pydantic==2.11.7
-pydantic_core==2.33.2
-redis==6.4.0
-sniffio==1.3.1
-starlette==0.47.3
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-redis
-psycopg2-binary
+﻿redis
+psycopg2-binary    
